--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
   <name>Archetype - archived-hibernate-entity</name>
   <url>http://maven.apache.org</url>
 
+  <properties>
+    <java.version>11</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
+
   <dependencies>
 
     <dependency>
